# trancelatorRT

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: RELEASE_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
scripts/: release.sh  setup-keystore.sh
src/: App.test.tsx  App.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs
src-tauri/src/audio/: buffer.rs  capture.rs  error.rs  mod.rs  playback.rs  state.rs  vad.rs
src-tauri/src/model/: downloader.rs  mod.rs  registry.rs  storage.rs
src-tauri/src/pipeline/: mod.rs  orchestrator.rs  stt.rs  translate.rs  tts.rs
src-tauri/src/pipeline/stt/: mod.rs  whisper_backend.rs
src-tauri/src/pipeline/translate/: mod.rs  nllb_backend.rs
src-tauri/src/pipeline/tts/: mod.rs  piper_backend.rs
src/components/: LanguageSelector.test.tsx  LanguageSelector.tsx  ModelCard.test.tsx  ModelCard.tsx  ModelManager.tsx  PipelineLog.tsx  PipelineStatus.test.tsx  PipelineStatus.tsx  RecordButton.test.tsx  RecordButton.tsx  StorageBar.test.tsx  StorageBar.tsx  TextDisplay.test.tsx  TextDisplay.tsx
src/hooks/: useModelManager.test.ts  useModelManager.ts  useTranslation.test.ts  useTranslation.ts
src/styles/: index.css
