[package]
name = "trancelator-rt"
version = "0.1.0"
description = "On-device real-time voice translation app"
authors = ["m96-chan"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cpal = "0.15"
webrtc-vad = "0.4"
ringbuf = "0.4"
thiserror = "2"
parking_lot = "0.12"
whisper-rs = "0.15"
# ct2rs = "0.9"  # TODO: Enable when sentencepiece-sys build is fixed

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
